--- a/pom.xml
+++ b/pom.xml
@@ -1479,8 +1479,8 @@
             <exclude>**/dist/**</exclude>
             <exclude>**/.factorypath</exclude>
             <exclude>**/app/**</exclude>
-            <exclude>pinot-controller/src/main/resources/**</exclude>
-            <exclude>pinot-controller/src/main/resources/.*</exclude>
+            <exclude>**/src/main/resources/dist/**</exclude>
+            <exclude>**/src/main/resources/.*</exclude>
           </excludes>
           <mapping>
             <thrift>JAVADOC_STYLE</thrift>
@@ -1536,6 +1536,9 @@
             <exclude>**/normalize*</exclude>
             <exclude>**/handlebars*</exclude>
             <exclude>**/beautify*</exclude>
+            <exclude>**/src/main/resources/.*</exclude>
+            <exclude>**/src/main/resources/dist/**</exclude>
+            <exclude>**/src/main/resources/node_modules/**</exclude>
 
             <!-- Binary files -->
             <exclude>**/*.json</exclude>
