--- a/pinot-controller/src/main/resources/tsconfig.json
+++ b/pinot-controller/src/main/resources/tsconfig.json
@@ -20,7 +20,7 @@
     "compilerOptions": {
         "outDir": "./dist/",
         "sourceMap": true,
-        "noImplicitAny": true,
+        "noImplicitAny": false,
         "module": "commonjs",
         "target": "es6",
         "esModuleInterop": true,
