--- a/pinot-controller/src/main/resources/package.json
+++ b/pinot-controller/src/main/resources/package.json
@@ -62,6 +62,7 @@
     "file-loader": "^6.0.0",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "^4.2.1",
+    "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-router-dom": "^5.2.0",
