--- a/pinot-controller/src/main/resources/package.json
+++ b/pinot-controller/src/main/resources/package.json
@@ -61,12 +61,16 @@
     "@types/react-router-dom": "^5.1.5",
     "axios": "^0.19.2",
     "axios-mock-adapter": "^1.18.1",
+    "codemirror": "^5.55.0",
     "cross-fetch": "^3.0.4",
+    "export-from-json": "^1.3.0",
     "file-loader": "^6.0.0",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "^4.2.1",
+    "lodash": "^4.17.17",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
+    "react-codemirror2": "^7.2.1",
     "react-dom": "16.13.1",
     "react-router-dom": "^5.2.0",
     "url-loader": "^4.1.0",
