--- a/pinot-controller/src/main/resources/package.json
+++ b/pinot-controller/src/main/resources/package.json
@@ -67,6 +67,7 @@
     "html-loader": "0.5.5",
     "html-webpack-plugin": "^4.2.1",
     "lodash": "^4.17.17",
+    "moment": "^2.27.0",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-codemirror2": "^7.2.1",
